fix npm vulnerability; fix account create form hook;

--- a/frontend/expenses/package.json
+++ b/frontend/expenses/package.json
@@ -16,10 +16,10 @@
     "@mui/icons-material": "^5",
     "@mui/material-nextjs": "^5.16.4",
     "axios": "^1.7.7",
-    "next": "14.2.5",
+    "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.44.2",
     "swr": "^2.2.5",
     "ts-results": "^3.3.0",
     "yup": "^1.4.0"
